# assist-robot-hardware

./: CMakeLists.txt
config/: controllers.yaml
description/: depth_camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  robot_model.urdf  ros2_control.xacro
launch/: launch_sim.launch.py  rplidar.launch.py  rsp.launch.py
meshes/: base_link.STL
robot_model/: package.xml
robot_model/config/: controllers.yaml  joint_names_robot_model.yaml
robot_model/description/: lidar.xacro  robot.urdf.xacro  robot_model.csv  ros2_control.xacro
robot_model/launch/: camera.launch.py  launch_sim.launch.py  left.yaml  right.yaml
robot_model/scripts/: cam_test_csi.cpp
scripts/: cam_test_csi.py  stereo_camera
stereo_camera_driver/: package.xml  setup.cfg  setup.py
stereo_camera_driver/stereo_camera_driver/: stereo_camera_node.py
