<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>robot_model</name>
  <version>0.0.1</version>

  <description>
    Four wheel mobile robot description package (URDF, meshes, launch files)
  </description>

  <maintainer email="m.santhosh0804@gmail.com">Santhosh</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <!-- Required so ament indexes the package -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

